--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shihab</title>
+    <style> 
+        .hl {
+            text-align: center; 
+        }
+        .bg-highlight {
+            background-color: rgb(250, 4, 45);
+        }
+    </style>
 </head>
+
 <body>
-    <h1>joj
-        
-    </h1>
+    <div class="hl"> 
+        <h1><span class="bg-highlight">joj</span></h1>
+    </div>
 </body>
 </html>
