--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Shihab</title>
-    <style> 
-        .hl {
-            text-align: center; 
-        }
-        .bg-highlight {
-            background-color: rgb(250, 4, 45);
-        }
-    </style>
-</head>
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+        
+            <title>Shihab Personal Website</title>
+            <link rel="stylesheet" href="style.css">
+        </head>
+        <body>
+            <section class="top">
+                <div class="half-width">
+                    <h1>Welcome to my website,</h1>
+                    <h1><span class="nhighlight">স্বাগতম আমার ওয়েবসাইটে</span></h1>
+                    <div class="centre">  <h3>About Me</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus fuga, veritatis aliquam dolores est id numquam? Sit repellat officia officiis sed aspernatur beatae tempore similique possimus ipsum fugit! Magnam, beatae.</p></div>
+                </div>
+                <div class="p-width">
+                    <img src="images/profile.png" alt="">
+                </div>
+                <a class="button" target="_blank" href="https://www.linkedin.com/in/mahfuz-shihab/">Click Me</a>
+            </section>
+<br>
 
-<body>
-    <div class="hl"> 
-        <h1><span class="bg-highlight">joj</span></h1>
-    </div>
-</body>
-</html>
+                                
+
+
+        </body>
+        </html>
